Next release

  - Strip all slashes from end and beginning of path in clean_path
    within traversal machinery.

0.5.1 (11/25/2008)

  - Add ``keys``, ``items``, and ``values`` methods to
    ``testing.DummyModel``.

  - Add __delitem__ method to ``testing.DummyModel``.

0.5.0 (11/18/2008)

  - Fix ModelGraphTraverser; don't try to change the ``__name__`` or
    ``__parent__`` of an object that claims it implements ILocation
    during traversal even if the ``__name__`` or ``__parent__`` of the
    object traversed does not match the name used in the traversal
    step or the or the traversal parent .  Rationale: it was insane to
    do so. This bug was only found due to a misconfiguration in an
    application that mistakenly had intermediate persistent
    non-ILocation objects; traversal was causing a persistent write on
    every request under this setup.

  - ``repoze.bfg.location.locate`` now unconditionally sets
    ``__name__`` and ``__parent__`` on objects which provide ILocation
    (it previously only set them conditionally if they didn't match
    attributes already present on the object via equality).

0.4.9 (11/17/2008)

  - Add chameleon text template API (chameleon ${name} renderings
    where the template does not need to be wrapped in any containing
    XML).

  - Change docs to explain install in terms of a virtualenv
    (unconditionally).

  - Make pushpage decorator compatible with repoze.bfg.convention's
    ``bfg_view`` decorator when they're stacked.

  - Add content_length attribute to testing.DummyRequest.

  - Change paster template ``tests.py`` to include a true unit test.
    Retain old test as an integration test.  Update documentation.

  - Document view registrations against classes and
    ``repoze.bfg.convention`` in context.

  - Change the default paster template to register its single view
    against a class rather than an interface.

  - Document adding a request type interface to the request via a