@@ -1,5 +1,12 @@
 Next release
 
+  - The component registration handler for views (functions or class
+    instances) now observes component adaptation annotations (see
+    ``zope.component.adaptedBy``) and uses them before the fallback
+    values for ``for_`` and ``request_type``. This change does not
+    affect existing code insomuch as the code does not rely on these
+    defaults when an annotation is set on the view (unlikely).
+
   - Strip all slashes from end and beginning of path in clean_path
     within traversal machinery.
 
